# realestate

./: .env.example  .gitignore  .mcp.json  _helpers.py  index.html  main.js  pyproject.toml  requirements.txt  server.py  style.css  web_api.py
.idx/: dev.nix
data/: region_codes.py
tools/: building_permit.py  complex.py  onbid.py  region.py  rent.py  trade.py
